--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,19 +5,20 @@ services:
       context: .
       dockerfile: services/pricing/Dockerfile
     depends_on:
-      - "pricing-database"
-  pricing-database:
-    image: postgres
+      - "pricing-postgres"
+      - "pricing-redis"
+  pricing-postgres:
+    image: "postgres:alpine"
     environment:
       POSTGRES_DB: pricing
       POSTGRES_PASSWORD: 04b76987bf0649519ef42136419d442e
-  pg-admin:
-    image: dpage/pgadmin4
-    environment:
-      PGADMIN_DEFAULT_EMAIL: "root@postgresql.org"
-      PGADMIN_DEFAULT_PASSWORD: "root"
-    ports:
-      - "16543:80"
-    depends_on:
-      - pricing-database
-      
+  pricing-redis:
+    image: "redis:alpine"
+
+  # pg-admin:
+  #   image: dpage/pgadmin4
+  #   environment:
+  #     PGADMIN_DEFAULT_EMAIL: "root@postgresql.org"
+  #     PGADMIN_DEFAULT_PASSWORD: "root"
+  #   ports:
+  #     - "16543:80"
