--- a/services/ride/tsconfig.json
+++ b/services/ride/tsconfig.json
@@ -3,6 +3,7 @@
     "baseUrl": "src",
     "esModuleInterop": true,
     "incremental": true,
+    "lib": ["dom"],
     "module": "commonjs",
     "outDir": "dist",
     "resolveJsonModule": true,
