--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       POSTGRES_DB: pricing
       POSTGRES_PASSWORD: 04b76987bf0649519ef42136419d442e
   pricing-redis:
-    image: "sewenew/redis-protobuf"
+    image: "redis:alpine"
   ride-api:
     build:
       context: .
