--- a/services/ride/package.json
+++ b/services/ride/package.json
@@ -11,13 +11,21 @@
   "author": "weslenng",
   "dependencies": {
     "google-protobuf": "^3.11.3",
-    "grpc": "^1.24.2"
+    "grpc": "^1.24.2",
+    "koa": "^2.11.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-router": "^8.0.7",
+    "yup": "^0.28.1"
   },
   "devDependencies": {
     "@types/chai": "^4.2.8",
     "@types/google-protobuf": "^3.7.2",
     "@types/jest": "^25.1.2",
+    "@types/koa": "^2.11.0",
+    "@types/koa-bodyparser": "^4.3.0",
+    "@types/koa-router": "^7.4.0",
     "@types/node": "^13.7.0",
+    "@types/yup": "^0.26.30",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
     "chai": "^4.2.0",
