--- a/services/ride/package.json
+++ b/services/ride/package.json
@@ -10,6 +10,7 @@
   },
   "author": "weslenng",
   "dependencies": {
+    "bluebird": "^3.7.2",
     "google-protobuf": "^3.11.3",
     "grpc": "^1.24.2",
     "koa": "^2.11.0",
@@ -18,6 +19,7 @@
     "yup": "^0.28.1"
   },
   "devDependencies": {
+    "@types/bluebird": "^3.5.29",
     "@types/chai": "^4.2.8",
     "@types/google-protobuf": "^3.7.2",
     "@types/jest": "^25.1.2",
