--- a/services/ride/package.json
+++ b/services/ride/package.json
@@ -13,6 +13,7 @@
     "bluebird": "^3.7.2",
     "google-protobuf": "^3.11.3",
     "grpc": "^1.24.2",
+    "ioredis": "^4.14.1",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^8.0.7",
@@ -22,6 +23,7 @@
     "@types/bluebird": "^3.5.29",
     "@types/chai": "^4.2.8",
     "@types/google-protobuf": "^3.7.2",
+    "@types/ioredis": "^4.14.7",
     "@types/jest": "^25.1.2",
     "@types/koa": "^2.11.0",
     "@types/koa-bodyparser": "^4.3.0",
