--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,11 @@ services:
       - "3001:3001"
   ride-redis:
     image: "redis:6.0-rc1-alpine"
+  ride-postgres:
+    image: "postgres:12.1-alpine"
+    environment:
+      POSTGRES_DB: ride
+      POSTGRES_PASSWORD: 122ff0fb63174b0f8496ec3f30c64470
   pg-admin:
     image: dpage/pgadmin4
     environment:
