--- a/services/ride/tsconfig.json
+++ b/services/ride/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "baseUrl": "src",
     "esModuleInterop": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "incremental": true,
     "lib": ["dom"],
     "module": "commonjs",
