create user created

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,8 @@ services:
     depends_on:
       - "user-postgres"
       - "user-redis"
+    environment:
+      - GIN_MODE=release
     ports:
       - "3002:3002"
 
