--- a/services/ride/package.json
+++ b/services/ride/package.json
@@ -26,7 +26,6 @@
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.29",
-    "@types/chai": "^4.2.8",
     "@types/google-protobuf": "^3.7.2",
     "@types/ioredis": "^4.14.7",
     "@types/jest": "^25.1.2",
@@ -34,16 +33,17 @@
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-router": "^7.4.0",
     "@types/node": "^13.7.0",
+    "@types/supertest": "^2.0.8",
     "@types/yup": "^0.26.30",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
-    "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "grpc-tools": "^1.8.1",
     "jest": "^25.1.0",
     "prettier": "^1.19.1",
+    "supertest": "^4.0.2",
     "ts-jest": "^25.2.0",
     "ts-protoc-gen": "^0.12.0",
     "typescript": "^3.7.5"
