--- a/.dockerignore
+++ b/.dockerignore
@@ -1,19 +1,5 @@
-# dependencies
+build
 node_modules
-
-# docker
-.dockerignore
-.eslintrc
-.gitignore
-docker-compose.yml
-Dockerfile
-LICENSE
-README.md
-
-# misc
-.vscode
-
-# protos
 protos/*.d.ts
 protos/*.go
 protos/*.js
