--- a/services/ride/tsconfig.json
+++ b/services/ride/tsconfig.json
@@ -7,7 +7,7 @@
     "experimentalDecorators": true,
     "incremental": true,
     "module": "commonjs",
-    "outDir": "dist",
+    "outDir": "build",
     "sourceMap": true,
     "strict": true,
     "target": "es2019"
